@@ -829,6 +829,7 @@ Tcl_BinaryObjCmd(
 			    value |= 1;
 			} else if (str[offset] != '0') {
 			    errorValue = str;
+			    Tcl_DecrRefCount(resultPtr);
 			    goto badValue;
 			}
 			if (((offset + 1) % 8) == 0) {
@@ -843,6 +844,7 @@ Tcl_BinaryObjCmd(
 			    value |= 128;
 			} else if (str[offset] != '0') {
 			    errorValue = str;
+			    Tcl_DecrRefCount(resultPtr);
 			    goto badValue;
 			}
 			if (!((offset + 1) % 8)) {
@@ -886,6 +888,7 @@ Tcl_BinaryObjCmd(
 			value <<= 4;
 			if (!isxdigit(UCHAR(str[offset]))) { /* INTL: digit */
 			    errorValue = str;
+			    Tcl_DecrRefCount(resultPtr);
 			    goto badValue;
 			}
 			c = str[offset] - '0';
@@ -907,6 +910,7 @@ Tcl_BinaryObjCmd(
 
 			if (!isxdigit(UCHAR(str[offset]))) { /* INTL: digit */
 			    errorValue = str;
+			    Tcl_DecrRefCount(resultPtr);
 			    goto badValue;
 			}
 			c = str[offset] - '0';
@@ -975,6 +979,7 @@ Tcl_BinaryObjCmd(
 		arg++;
 		for (i = 0; i < count; i++) {
 		    if (FormatNumber(interp, cmd, listv[i], &cursor)!=TCL_OK) {
+			Tcl_DecrRefCount(resultPtr);
 			return TCL_ERROR;
 		    }
 		}
